k8s/templates/basement-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: basement
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: basement
    spec:
      containers:
        # nginx
        - name: nginx-basement
          image: localhost:5000/basement/nginx:master
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /app
            name: basement-vol
        # php-fpm
        - name: php-basement
          image: localhost:5000/basement/php:master
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /app
            name: basement-vol
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: basement-vol
        annotations:
          volume.beta.kubernetes.io/storage-class: "rbd"
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: basement
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    app: basement
